<resources>
    <string name="app_name">VLOC</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">"Explore Interesting Places Around You and Discover Hidden Wonders!"</string>
    <string name="title_welcome_page">Welcome!</string>
    <string name="title_signup_page">Please complete your data first</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_login_page">Let\'s start!</string>
    <string name="name">Name</string>
    <string name="message_main_page">Welcome</string>
    <string name="logout">Log Out</string>
    <string name="signup">Sign Up</string>
    <string name="destination_name">My Story</string>
    <string name="description">Once Upon a Time</string>
    <string name="date">11 December 2003</string>
    <string name="destination_photo">Photo\'s destination</string>
    <string name="camera">CAMERA</string>
    <string name="upload">UPLOAD</string>
    <string name="gallery">GALLERY</string>
    <string name="description_placeholder">Description</string>
    <string name="warning">There is a mistake. Please Try again</string>
    <string name="hero">hero picture</string>
    <string name="setting">Setting</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="retry">Try Again</string>
    <string name="failed_message">Failed to fetch data</string>
    <string name="valid_email">Email is not valid. Valid email: 123@gmail.com</string>
    <string name="valid_password">Password must be more than 8 characters</string>
    <string name="add_my_location">Add My Location</string>
    <string name="media_not_selected">"No media selected"</string>
    <string name="location_no_granted">Location No Granted</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>

    <string name="title_profile">Profile</string>
    <string name="welcome">welcome!</string>
    <string name="favorites">Favorites❤️</string>
    <string name="all" translatable="false">all</string>
    <string name="beach" translatable="false">beach</string>
    <string name="museum" translatable="false">museum</string>
    <string name="temple" translatable="false">temple</string>
    <string name="get_started">Let\'s Start!</string>
    <string name="theme">Theme</string>
    <string name="register_word_in_login">Don\'t have an account? Please, Register Now!</string>
    <string name="result">Result</string>
    <string name="title_details">Details</string>
    <string name="login_in_register_activity">or Login</string>
    <string name="login_first">Login First!</string>
    <string name="rating">Rating</string>
    <string name="rating_score">%s⭐</string>
    <string name="accuration">%s Persen</string>
    <string name="score">4,5⭐</string>
    <string name="open_time">Open Time</string>
    <string name="time">08.00 – 20.00 WIB</string>
    <string name="time_placeholder">%s WIB</string>
    <string name="htm">HTM</string>
    <string name="htm_price">Rp %s0</string>
    <string name="htm_nominal">Rp 20.000, 00</string>
    <string name="open_maps">Open Maps</string>

    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="exit_message">Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="guest">Guest</string>
    <string name="find_your_destination_here">Find Your Destination Here</string>
    <string name="you_haven_t_login_yet">You Haven\'t Login Yet</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_key_login" translatable="false" >key_login</string>
    <string name="pref_key_logout" translatable="false">key_logout</string>
    <string name="pref_key_language" translatable="false">key_language</string>
    <string name="hi_user">Hi, User!</string>
    <string name="greetingformat">Hi, %s !</string>
    <string name="our_recommendation">Our Recommendation</string>
    <string name="predict_message">You must login first :)</string>

</resources>